--- a/package.json
+++ b/package.json
@@ -3,9 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.27",
+    "apollo-client": "^2.4.12",
+    "apollo-link": "^1.2.6",
+    "apollo-link-error": "^1.1.5",
+    "apollo-link-http": "^1.5.9",
+    "apollo-link-state": "^0.4.2",
+    "apollo-link-ws": "^1.0.12",
+    "apollo-utilities": "^1.1.2",
+    "axios": "^0.18.0",
+    "global": "^4.3.2",
+    "google-maps-react": "^2.0.2",
+    "graphql": "^14.1.1",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-apollo": "^2.4.0",
     "react-dom": "^16.7.0",
-    "react-scripts-ts": "3.1.0"
+    "react-helmet": "^5.2.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts-ts": "^3.1.0",
+    "react-sidebar": "^3.0.2",
+    "react-toastify": "^4.5.2",
+    "styled-components": "^4.1.3",
+    "styled-reset": "^1.6.6",
+    "subscriptions-transport-ws": "^0.9.15"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -14,10 +35,14 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/googlemaps": "^3.30.16",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
+    "@types/prop-types": "^15.5.8",
     "@types/react": "^16.7.21",
     "@types/react-dom": "^16.0.11",
+    "@types/styled-components": "^4.1.6",
     "typescript": "^3.2.4"
   }
 }
