--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "precodegen": "apollo schema:download --endpoint=http://localhost:4000/graphql",
+    "codegen": "apollo codegen:generate src/types/api.d.ts --queries=src/**/*.q.ts --addTypename --localSchemaFile schema.json --target typescript --outputFlat"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
